; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sysdefaulttest.c_global_init.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sysdefaulttest.c_global_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENSSL_INIT_ENGINE_ALL_BUILTIN = common dso_local global i32 0, align 4
@OPENSSL_INIT_LOAD_CONFIG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @global_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @OPENSSL_INIT_ENGINE_ALL_BUILTIN, align 4
  %3 = load i32, i32* @OPENSSL_INIT_LOAD_CONFIG, align 4
  %4 = or i32 %2, %3
  %5 = call i32 @OPENSSL_init_ssl(i32 %4, i32* null)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

8:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %9

9:                                                ; preds = %8, %7
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @OPENSSL_init_ssl(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
